--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Menu</title>
   </head>
   <body>
 
@@ -11,40 +11,29 @@
     <script src="js/index.js"></script>
 
 
-    <h2>Favorite books</h2>
+    <h2>Menú</h2>
 <ul class="accordion-menu">
   <li>
-    <div class="dropdownlink"><i class="fa fa-road" aria-hidden="true"></i> History
+    <div class="dropdownlink"><i class="fa fa-road" aria-hidden="true"></i> <a href ="registro.html"> Registro de usuario </a>
+      <i class="fa fa-chevron-down" aria-hidden="true"></i>
+    </div>
+
+  </li>
+  <li>
+
+    <div class="dropdownlink"><i class="fa fa-motorcycle" aria-hidden="true"></i><a href = "grilla.html"> Grilla </a>
       <i class="fa fa-chevron-down" aria-hidden="true"></i>
     </div>
     <ul class="submenuItems">
-      <li><a href="#">History book 1</a></li>
-      <li><a href="#">History book 2</a></li>
-      <li><a href="#">History book 3</a></li>
+      <li><a href="#">Action book 1</a></li>
+      <li><a href="#">Action book 2</a></li>
+      <li><a href="#">Action book 3</a></li>
     </ul>
   </li>
+
   <li>
-    <div class="dropdownlink"><i class="fa fa-paper-plane" aria-hidden="true"></i> Fiction
-      <i class="fa fa-chevron-down" aria-hidden="true"></i>
-    </div>
-    <ul class="submenuItems">
-      <li><a href="#">Fiction book 1</a></li>
-      <li><a href="#">Fiction book 2</a></li>
-      <li><a href="#">Fiction book 3</a></li>
-    </ul>
-  </li>
-  <li>
-    <div class="dropdownlink"><i class="fa fa-quote-left" aria-hidden="true"></i> Fantasy
-      <i class="fa fa-chevron-down" aria-hidden="true"></i>
-    </div>
-    <ul class="submenuItems">
-      <li><a href="#">Fantasy book 1</a></li>
-      <li><a href="#">Fantasy book 2</a></li>
-      <li><a href="#">Fantasy book 3</a></li>
-    </ul>
-  </li>
-  <li>
-    <div class="dropdownlink"><i class="fa fa-motorcycle" aria-hidden="true"></i> Action
+
+    <div class="dropdownlink"><i class="fa fa-motorcycle" aria-hidden="true"></i> Autores: Juan Pablo Perez ♥ Laura Jaimes
       <i class="fa fa-chevron-down" aria-hidden="true"></i>
     </div>
     <ul class="submenuItems">
